--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <!-- left margin below large breakpoint for alignment -->
                     <div class="card mt-3 ml-lg-5" style="background-image: url('assets/leather_1.png');">
                         <div class="card-body">
-                            <h2 class="card-title display-4 text-muted">About Me</h2>
+                            <h2 class="card-title display-4 text-muted ml-5 ml-md-0">About Me</h2>
                             <!-- image floated for text wrapping -->
                             <img src="assets/profile picture.jpg" alt="Profile picture of Adam Parsons"
-                                class="img-fluid float-left mr-2" style="max-width:300px">
+                                class="img-fluid float-md-left ml-5 ml-md-2 mr-md-2 mb-4 mb-lg-0" style="max-width:300px">
                             <p class="ml-2">
                                 Hello, and welcome! My name is Adam Parsons and I am an aspiring web developer living in
                                 Philadelphia Pennsylvania. I've always been fascinatated by anything having to do with
