--- a/portfolio.html
+++ b/portfolio.html
@@ -378,6 +378,44 @@
                         </div>
                       </div>
                     </div>
+                    <div class="col-md-6 pb-4">
+                      <div
+                        class="card text-center"
+                        style="
+                          width: 100%;
+                          height: 100%;
+                          background-color: ivory;
+                          color: black;
+                        "
+                      >
+                        <div class="card-header">
+                          <a
+                            href="https://github.com/ravalash/Globe-Plotter"
+                            target="_blank"
+                          >
+                            <h5 style="font-weight: bold; color: black;">
+                              Globe Plotter
+                            </h5>
+                          </a>
+                        </div>
+                        <a
+                          href="http://theglobeplotter.com/"
+                          target="_blank"
+                        >
+                          <img
+                            class="card-img-top"
+                            src="assets/globeplotter.jpg"
+                            alt="Card image cap"
+                            style="border: blanchedalmond solid 2px;"
+                        /></a>
+
+                        <div class="card-body d-flex align-items-end">
+                          <p class="card-text">
+                            A travel planning site to help people discover their next favorite memory
+                          </p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
